SUPPORT-762, Fixed IE boxlist error and word-wrap

--- a/themes/five_pack/scss/base/_mixins.scss
+++ b/themes/five_pack/scss/base/_mixins.scss
@@ -47,7 +47,7 @@
 @mixin word-wrap() {
   overflow-wrap: break-word;
   word-wrap: break-word;
-  -ms-word-break: break-all;
+  -ms-word-break: break-word;
   word-break: break-word;
   -ms-hyphens: auto;
   -moz-hyphens: auto;
